src/objects/Partner_Program__c.object
<CustomObject>
    <fields>
        <fullName>Category_Classification__c</fullName>
        <label>Category/Classification</label>
        <picklist>
            <picklistValues>
                <fullName>Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certified Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complementary Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_Specialization__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Specialization?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Program_Effective_End_Date__c</fullName>
        <label>Program Effective End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Program_Effective_Start_Date__c</fullName>
        <label>Program Effective Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Specialization_Category__c</fullName>
        <label>Specialization Category</label>
        <picklist>
            <picklistValues>
                <fullName>Product Focus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Delivery Authorization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Capability</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Partner Program</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Category_Classification__c</columns>
        <columns>Specialization_Category__c</columns>
        <columns>Is_Specialization__c</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Specialization</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category_Classification__c</field>
            <operation>equals</operation>
            <value>Specialization</value>
        </filters>
        <label>Specialization</label>
    </listViews>
    <nameField>
        <label>Partner Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>